updated text to free range

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <h3>Emily From My Hometown</h3>
+                    <h3>Hello, I am Thuzar</h3>
                     <h2 class="text-yellow">Web Developer</h2>
                     <p>
                         I designs beautifully simple things and I love what I do.
