update index text

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="d-flex">
                         <div>
                             <p>Burmese</p>
-                            <p>English</p>
+                            <p>Japan</p>
                             <p>India</p>
                         </div>
                         <div>
