update index text

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div>
                             <p>Burmese</p>
                             <p>English</p>
-                            <p>India</p>
+                            <p>Germany</p>
                         </div>
                         <div>
                             <p> : <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle"></i> <i class="fa-solid fa-circle-half-stroke"></i></p>
